--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,21 +1,21 @@
 version: "3"
 
 services:
-  https-portal:
-    image: steveltn/https-portal:1
-    container_name: server
-    ports:
-      - "80:80"
-      - "443:443"
-    environment:
-      DOMAINS: "www.hk-41.work -> http://frontend:81"
-      STAGE: "production"
+  # https-portal:
+  #   image: steveltn/https-portal:1
+  #   container_name: server
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   environment:
+  #     DOMAINS: "www.hk-41.work -> http://frontend:81"
+  #     STAGE: "production"
   frontend:
     build:
       context: ./frontend
       dockerfile: ./docker/prod/Dockerfile
     ports:
-      - "81:80"
+      - "80:80"
     restart: always
   backend:
     build:
