--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -9,6 +9,8 @@ services:
       - "81:3000"
     volumes:
       - ./frontend:/app
+    environment:
+      - REACT_APP_MODE=dev
   backend:
     build:
       context: ./backend
@@ -18,3 +20,5 @@ services:
       - "82:8000"
     volumes:
       - ./backend:/app
+    environment:
+      - DJANGO_APP_MODE=dev
