--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -16,6 +16,8 @@ services:
       dockerfile: ./docker/prod/Dockerfile
     ports:
       - "80:80"
+    environment:
+      - REACT_APP_MODE=prod
     restart: always
   backend:
     build:
@@ -23,3 +25,6 @@ services:
       dockerfile: ./docker/prod/Dockerfile
     ports:
       - "82:80"
+    environment:
+      - DJANGO_APP_MODE=prod
+    restart: always
